--- a/static/css/blackburn.css
+++ b/static/css/blackburn.css
@@ -72,16 +72,18 @@ i {display: inline-block;margin-right: 0.2em;}
 }
 
 
+/*******************************************************************/
+
 body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea, button, th, td {margin:0; padding:0;outline: none;}
 /*width: 80%; margin-right: auto; margin-left: auto;*/
-.reber{padding-top:0px;margin:0px auto;width:85%;}
+.reber{padding-top:10px;margin:0px auto;width:85%;}
 .head{height:90px;border-bottom:#EFEFEF 1px solid;}
 .main{padding-top:1px;zoom:1;overflow:hidden;width:99%;}
 .foot{height:40px;line-height:40px;padding:0px 5px 20px 5px;}
 
 /*head css*/
-.logo{float:left;padding:10px 10px;width:70px;}
-.logo a{color:#666;line-height:90px;height:90px;display:block;}
+.logo{float:left;padding:10px 10px;width:140px;height:70px;}
+.logo a{padding:0px 10px 15px 10px;width:70px;color:#666;line-height:70px;height:90px;display:block;}
 .nav{float:right;padding:0px 10px;}
 .nav li{float:left;font-size:16px;display:inline;}
 .nav li a{display:inline-block;padding:0px 10px;line-height:80px;color:#555;}
@@ -117,3 +119,30 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 
 /*main右侧topics和tags格式*/
 .asidetitle{font-size:1.3em;color:#2ca6cb;padding:0 0 .3125em 0;border-bottom:.1875em solid #ccc;}
+
+
+/*******************************************************************/
+/*标签云*/
+#container {}
+#footer {position: relative; height: 70px;clear:both;} 
+.clearfix:after {content: ".";display: block;height: 0;clear: both;visibility: hidden;}
+.clearfix {display: inline-block;}
+* html .clearfix { height: 1%;}
+.clearfix {display: block;}
+#page,#footer_inner{margin:0 auto;width:960px;}
+#container{margin:0 auto;padding:40px 0 0;}
+#container h2 {font-weight:normal;line-height:28px;}
+#container p{padding:10px 0;}
+.credit{text-align:center;padding: 20px 0 100px;font-size:10px;}
+a:hover{text-decoration:underline;}
+#footer{background-color:#212121;width:100%;}
+#footer h2{font-size:18px;font-weight:normal;height:70px;line-height:70px;font-family:"Microsoft Yahei";color:#eee;}
+#footer_inner{position:relative;}
+#footer a.tzine,a.tzine:visited{color:#FCFCFC;font-size:12px;line-height:70px;position:absolute;top:0;right:0;width:90px;}
+
+
+/**{margin:0;padding:0;}*/
+/*h1#logo a{display:block;height:70px;}*/
+/*h1#logo{overflow:hidden;height:93px;padding: 25px 0;}*/
+/*body{background:#FFFFFF;font:13px/1.3 'Microsoft Yahei','宋体';color:#999;}*/
+/*a, a:visited {text-decoration:none;outline:none;color:#97cae6;}*/
