--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,68 @@
+<!--[if lt IE 9]>
+<script type="text/javascript" src="/js/excanvas.js"></script>
+<![endif]-->
+<!-- <script src="/js/jquery.tagcanvas.js" type="text/javascript"></script>
+
+
+<canvas width="300" height="300" id="myCanvas">
+    <ul>
+        <li><a href="http://sc.chinaz.com/" target="_blank">Google</a></li>
+        <li><a href="http://sc.chinaz.com/">Fish</a></li>
+        <li><a href="http://sc.chinaz.com/">Chips</a></li>
+        <li><a href="http://sc.chinaz.com/">Salt</a></li>
+        <li><a href="http://sc.chinaz.com/">Vinegar</a></li>
+        <li><a href="http://sc.chinaz.com/">Fish</a></li>
+        <li><a href="http://sc.chinaz.com/">Chips</a></li>
+        <li><a href="http://sc.chinaz.com/">Salt</a></li>
+        <li><a href="http://sc.chinaz.com/">Vinegar</a></li>
+        <li><a href="http://sc.chinaz.com/">Fish</a></li>
+        <li><a href="http://sc.chinaz.com/">Chips</a></li>
+        <li><a href="http://sc.chinaz.com/">Salt</a></li>
+        <li><a href="http://sc.chinaz.com/">Vinegar</a></li>
+    </ul>
+</canvas>
+
+<script type="text/javascript">
+$(document).ready(function () {
+    var oDiv=document.getElementsByClassName('qcloud');
+    TagCanvas.Start('myCanvas', '', {
+        textColour : '#000',
+        outlineColour: '#16a085',
+        outlineThickness : 1,
+        maxSpeed : 0.03,
+        depth : 0.75,
+        wheelZoom : false
+    });
+
+    //边栏固定
+    var $sidebar = $("#fixed"),
+        $fixside = $('.fixsidebar'),
+        $window = $(window),
+        offset = $sidebar.offset(),
+        widths=$sidebar.width();
+    if($window.width() > 768){
+        $window.scroll(function() {
+            if ($window.scrollTop() > offset.top) {
+                var widths=$sidebar.width();
+                $fixside.stop().animate({top:'20px'});
+                $fixside.addClass('fix').css("width",widths);
+            } else {
+                $fixside.stop().animate({top:'1px'});
+                $fixside.removeClass('fix');
+            }
+        });
+    }
+});
+
+</script>
+ -->
+
+
+
+
+
+
+
     <!-- 设置回到顶部按钮 -->
     <div style="width:20px;height:20px;position:fixed;right:50px;bottom:50px;">
       <a href="#top" id="goToTop">
@@ -28,7 +93,7 @@
     });
     </script>
 
-    <script src="{{ .Site.BaseURL }}/js/ui.js"></script>
+    <!-- <script src="/js/ui.js"></script> -->
 
 </body>
 </html>
