--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,24 +29,23 @@
 
   <link rel="stylesheet" href="/css/blackburn.css">
 
-  <!-- Icons -->
+  <!-- Home/Archive/Links/About Icons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- Icon透明图片 -->
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
 
   <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}/index.xml" />
+  <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="/index.xml" />
 
   <!-- Code highlight -->
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/monokai-sublime.css" type="text/css">
-  <script src="{{ .Site.BaseURL }}/js/highlight.min.js"></script>
+  <link rel="stylesheet" href="/css/monokai-sublime.css" type="text/css">
+  <script src="/js/highlight.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
 
-  <!-- Icon -->
-  <link rel="shortcut icon" href="{{ .Site.BaseURL }}/img/favicon.ico" type="image/x-icon" />
-
-  <script src="//cdn.bootcss.com/jquery/2.0.0/jquery.min.js"></script>
+  <script src="/js/jquery.min.js"></script>
 
 </head>
 <body>
