--- a/static/css/blackburn.css
+++ b/static/css/blackburn.css
@@ -83,7 +83,7 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 
 /*head css*/
 .logo{float:left;padding:10px 10px;width:140px;height:70px;}
-.logo a{padding:0px 10px 15px 10px;width:70px;color:#666;line-height:70px;height:90px;display:block;}
+.logo a{width:70px;height:70px;line-height:70px;color:#666;display:block;}
 .nav{float:right;padding:0px 10px;}
 .nav li{float:left;font-size:16px;display:inline;}
 .nav li a{display:inline-block;padding:0px 10px;line-height:80px;color:#555;}
