--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="/css/side-menu.css">
   {{ "<!--<![endif]-->" | safeHTML }}
 
-  <link rel="stylesheet" href="/css/blackburn.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <!-- Home/Archive/Links/About Icons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
