--- a/layouts/partials/links.html
+++ b/layouts/partials/links.html
@@ -1,6 +1,6 @@
 <div>
     <h2 class="asidetitle">友链</h2>
     <div style="padding:5px 0px 10px 10px;">
-        <a href="http://www.test404.com/">&nbsp;&nbsp;Test404's Blog</a>
+        <a href="http://www.test404.com/">Test404's Blog</a>
     </div>
 </div>
