--- a/layouts/partials/page_foot.html
+++ b/layouts/partials/page_foot.html
@@ -1,6 +1,6 @@
 
 <div class="foot">
-    <div style="float:left;text-align: center;">
+    <div class="copyright">
         <!-- Copyright -->
         {{ .Site.Copyright | safeHTML }}
 
@@ -10,7 +10,7 @@
           document.write(unescape("%3Cspan id='cnzz_stat_icon_1261003390'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1261003390%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
         </script>
     </div>
-    <div style="float:right;">
+    <div class="social">
         <!-- social -->
         {{ with .Site.Params.Social.GitHub }}
             <a href="https://github.com/{{ . }}" target="_blank"><i class="fa fa-github-square fa-fw"></i>GitHub</a>
