--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -6,7 +6,7 @@
     <h2 class="asidetitle">{{ .Site.Params.Strings.Tags }}</h2>
         <div style="padding:5px 0px 10px 10px;">
         {{ range $name, $items := .Site.Taxonomies.tags }}
-            <a href="{{ $.Site.BaseURL }}/tags/{{ $name | urlize | lower }}" title="{{ $name }}" style="background-color:#23b7e5;color:#080808;line-height:25px;">{{ $name }}<sup>{{ len $items }}</sup></a>
+            <a href="{{ $.Site.BaseURL }}/tags/{{ $name | urlize | lower }}" title="{{ $name }}">{{ $name }}<sup>{{ len $items }}</sup></a>
         {{ end }}
         </div>
 </div>
