--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@ a {color: #3b8bba;text-decoration: none;}
 a:hover,
 a:focus {text-decoration: underline;}
 a:visited {color: #265778;}
+a:hover{color:#F66535;}
 
 
 pre {white-space: pre-wrap;word-wrap: break-word;}
@@ -22,9 +23,9 @@ pre {white-space: pre-wrap;word-wrap: break-word;}
 article > footer {text-align: right;}
 
 .prev-next-post {
-  margin-top: 2em;
-  padding-top: 2em;
-  padding-bottom: 2em;
+  margin-top: 1em;
+  padding-top: 1em;
+  padding-bottom: 1em;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
 }
@@ -80,15 +81,16 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 /*width: 80%; margin-right: auto; margin-left: auto;*/
 .reber{padding-top:10px;margin:0px auto;width:85%;}
 .head{height:90px;border-bottom:#EFEFEF 1px solid;}
-.main{padding-top:1px;zoom:1;overflow:hidden;width:99%;}
-.foot{height:40px;line-height:40px;padding:0px 5px 20px 5px;}
+.main{padding-top:1px;padding-bottom:5px;zoom:1;overflow:hidden;width:99%;}
+.foot{height:20px;padding-top:5px;margin-bottom:10px;}
 
 /*head css*/
-.logo{float:left;padding:10px 10px;width:140px;height:70px;}
+.logo{float:left;padding:10px 20px;width:140px;height:70px;}
 .logo a{width:70px;height:70px;line-height:70px;color:#666;display:block;}
 .nav{float:right;padding:0px 10px;}
-.nav li{float:left;font-size:16px;display:inline;}
-.nav li a{display:inline-block;padding:0px 10px;line-height:80px;color:#555;}
+.nav li{float:left;padding:15px 10px;height:40px;font-size:16px;display:inline;}
+.nav li a{padding:0px 10px 0px 10px;line-height:70px;color:#555;}
+.nav li a:hover{color:#F66535;}
 
 /*main css*/
 .left{float:left;width:70%;padding:15px;}
@@ -103,9 +105,8 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 
 
 /*foot css*/
-.copyright{float:left;}
-.copyright ul li{float:left;margin-left:10px;color:#000;}
-
+.copyright{float:left;text-align: center;}
+.social{float:right;}
 
 /*当页面小于700px时隐藏logo和right*/
 @media screen and (max-width: 700px) {
@@ -114,6 +115,11 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
   .left{width:95%;}
   .reber{padding-top:0px;margin:0px auto;width:99%;}
 }
+@media screen and (max-width: 600px) {
+  .copyright {display: none;}
+  .social{float:none;}
+}
+
 
 /*文章列表显示不友好，覆盖重写*/
 .pure-u-16-24{width:60%;*width:60%;font-size:17px;}
