--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,8 +94,8 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 
 /*main css*/
 .left{float:left;width:70%;padding:15px;}
-.cont h2{line-height:36px;font-size:22px;}
-.cont p{line-height:24px;margin-bottom:14px;}
+.content h2{line-height:36px;font-size:22px;}
+.content p{line-height:24px;margin-bottom:14px;}
 
 .right{float:right;width:21%;padding-right:10px;}
 .right .text{border:#999 1px solid;padding:10px 8px;width:21%;color:#a9a9a9;margin:10px 0px 20px 0px;}
@@ -110,14 +110,12 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 
 /*当页面小于700px时隐藏logo和right*/
 @media screen and (max-width: 700px) {
+  .reber{padding-top:0px;margin:0px auto;width:99%;}
   .logo {display: none;}
   .right {display: none;}
-  .left{width:95%;}
-  .reber{padding-top:0px;margin:0px auto;width:99%;}
-}
-@media screen and (max-width: 600px) {
+  .left{float:none;width:95%;}
   .copyright {display: none;}
-  .social{float:none;}
+  .social{float:none;text-align:center;}
 }
 
 
