--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
             <div>
                 <h2>{{ .Title }}</h2>
             </div>
-            <div class="cont">
+            <div class="content">
                 <!-- 文章的时间、分类/标签的图标 -->
                 <div class="post-meta">
                     <div style="padding:5px 5px 2px 0px;">
