--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -8,7 +8,7 @@
     <div class="main">
         <div class="left">
             <h2 style="padding:0px 0px 15px 0px;">-- {{ .Title }} --</h2>
-            <div class="cont">
+            <div class="content">
                 {{ range ( .Paginate (where .Data.Pages "Type" "posts")).Pages }}
                     {{ .Render "summary"}}
                 {{ end }}
