--- a/layouts/partials/page_main.html
+++ b/layouts/partials/page_main.html
@@ -1,7 +1,7 @@
 
 <div class="main">
     <div class="left">
-        <div class="cont">
+        <div class="content">
             {{ range first .Site.Params.Paginate .Data.Pages }}
                 {{ .Render "summary"}}
             {{ end }}
