--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,6 +74,8 @@ i {display: inline-block;margin-right: 0.2em;}
     z-index:999;
 }
 
+.goToTop{width:20px;height:20px;position:fixed;right:50px;bottom:50px;}
+
 
 /*******************************************************************/
 
@@ -98,7 +100,7 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 .content p{line-height:24px;margin-bottom:14px;}
 
 .right{float:right;width:21%;padding-right:10px;}
-.right .text{border:#999 1px solid;padding:10px 8px;width:21%;color:#a9a9a9;margin:10px 0px 20px 0px;}
+.right .text{border:#999 1px solid;padding:10px 8px;margin:10px 0px 20px 0px;width:21%;color:#a9a9a9;}
 .right ul{padding:0px 0px 5px 0px;}
 .right ul li{line-height:25px;}
 .right ul li a:hover{color:#F66535;}
@@ -111,11 +113,22 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 /*当页面小于700px时隐藏logo和right*/
 @media screen and (max-width: 700px) {
   .reber{padding-top:0px;margin:0px auto;width:99%;}
+  .head{height:30px;border-bottom:#EFEFEF 1px solid;}
+  .main{padding-top:1px;padding-bottom:0px;zoom:1;overflow:hidden;width:99%;}
+
   .logo {display: none;}
-  .right {display: none;}
+  .nav{float:none;padding:0px 10px;text-align:center;}
+  .nav li{float:none;text-align:center;padding:5px 0px;height:30px;font-size:16px;display:inline;}
+  .nav li a{padding:5px 5px;line-height:20px;color:#555;}
+  
   .left{float:none;width:95%;}
+  .right {display: none;}
+  
   .copyright {display: none;}
   .social{float:none;text-align:center;}
+  
+  .goToTop{width:30px;height:30px;position:fixed;right:10px;bottom:10px;}
+  .goToTop a img{width:30px;height:30px;display:block;}
 }
 
 
