--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,67 +1,16 @@
-<!--[if lt IE 9]>
-<script type="text/javascript" src="/js/excanvas.js"></script>
-<![endif]-->
-<!-- <script src="/js/jquery.tagcanvas.js" type="text/javascript"></script>
-
-
-<canvas width="300" height="300" id="myCanvas">
-    <ul>
-        <li><a href="http://sc.chinaz.com/" target="_blank">Google</a></li>
-        <li><a href="http://sc.chinaz.com/">Fish</a></li>
-        <li><a href="http://sc.chinaz.com/">Chips</a></li>
-        <li><a href="http://sc.chinaz.com/">Salt</a></li>
-        <li><a href="http://sc.chinaz.com/">Vinegar</a></li>
-        <li><a href="http://sc.chinaz.com/">Fish</a></li>
-        <li><a href="http://sc.chinaz.com/">Chips</a></li>
-        <li><a href="http://sc.chinaz.com/">Salt</a></li>
-        <li><a href="http://sc.chinaz.com/">Vinegar</a></li>
-        <li><a href="http://sc.chinaz.com/">Fish</a></li>
-        <li><a href="http://sc.chinaz.com/">Chips</a></li>
-        <li><a href="http://sc.chinaz.com/">Salt</a></li>
-        <li><a href="http://sc.chinaz.com/">Vinegar</a></li>
-    </ul>
-</canvas>
-
-<script type="text/javascript">
-$(document).ready(function () {
-    var oDiv=document.getElementsByClassName('qcloud');
-    TagCanvas.Start('myCanvas', '', {
-        textColour : '#000',
-        outlineColour: '#16a085',
-        outlineThickness : 1,
-        maxSpeed : 0.03,
-        depth : 0.75,
-        wheelZoom : false
+    <!-- 标签云 -->
+    <!--[if lt IE 9]>
+    <script type="text/javascript" src="/js/excanvas.js"></script>
+    <![endif]-->
+    <script src="/js/jquery.tagcanvas.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+      if( ! $('#myCanvas').tagcanvas({textColour : '#2a2b2d',outlineColour: '#16a085',outlineThickness : 1,maxSpeed : 0.05,depth : 0.75,})) {
+          $('#myCanvasContainer').hide(); // TagCanvas failed to load
+      }
+      // your other jQuery stuff here...
     });
-
-    //边栏固定
-    var $sidebar = $("#fixed"),
-        $fixside = $('.fixsidebar'),
-        $window = $(window),
-        offset = $sidebar.offset(),
-        widths=$sidebar.width();
-    if($window.width() > 768){
-        $window.scroll(function() {
-            if ($window.scrollTop() > offset.top) {
-                var widths=$sidebar.width();
-                $fixside.stop().animate({top:'20px'});
-                $fixside.addClass('fix').css("width",widths);
-            } else {
-                $fixside.stop().animate({top:'1px'});
-                $fixside.removeClass('fix');
-            }
-        });
-    }
-});
-
-</script>
- -->
-
-
-
-
-
-
+    </script>
 
     <!-- 设置回到顶部按钮 -->
     <div class="goToTop">
@@ -69,7 +18,6 @@ $(document).ready(function () {
         <img src="{{ .Site.BaseURL }}/img/goto_top.png" alt="可以返回顶部" title="回到顶部" style="display:block;" />
       </a>
     </div>
-
     <script type="text/javascript">
     $.fn.goToTop = function () {
         if ($(window).scrollTop()<400) {
@@ -87,7 +35,6 @@ $(document).ready(function () {
             return false;
         });
     }
-
     $(document).ready(function () {
         $('#goToTop').goToTop();
     });
