--- a/layouts/partials/topics.html
+++ b/layouts/partials/topics.html
@@ -1,14 +1,15 @@
 <!-- 显示类别 -->
 
+<div style="padding-bottom:20px;">
 {{ if isset .Site.Taxonomies "topics" }}
-{{ if not (eq (len .Site.Taxonomies.topics) 0) }}
-<div>
-    <h2 class="asidetitle">{{ .Site.Params.Strings.Categories }}</h2>
-    <ul style="margin-left:10px;left:10px">
-        {{ range $name, $items := .Site.Taxonomies.topics }}
-            <li style="list-style-type:none;"><a href="{{ $.Site.BaseURL }}/topics/{{ $name | urlize | lower }}" title="{{ $name }}">{{ $name }}<sup>{{ len $items }}</sup></a></li>
-        {{ end }}
-    </ul>
+    {{ if not (eq (len .Site.Taxonomies.topics) 0) }}
+        <h2 class="asidetitle">{{ .Site.Params.Strings.Categories }}</h2>
+        <ul style="margin-left:10px;left:10px;">
+            {{ range $name, $items := .Site.Taxonomies.topics }}
+                <li style="list-style-type:none;float:left;width:50%;"><a href="{{ $.Site.BaseURL }}/topics/{{ $name | urlize | lower }}" title="{{ $name }}">{{ $name }}<sup>{{ len $items }}</sup></a></li>
+            {{ end }}
+        </ul>
+        <div style="clear:both;"></div>
+    {{ end }}
+{{ end }}
 </div>
-{{ end }}
-{{ end }}
