--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -1,14 +1,18 @@
 <!-- 显示标签 -->
 
+<div style="padding-bottom:20px;">
 {{ if isset .Site.Taxonomies "tags" }}
-{{ if not (eq (len .Site.Taxonomies.tags) 0) }}
-<div>
-    <h2 class="asidetitle">{{ .Site.Params.Strings.Tags }}</h2>
-        <div style="padding:5px 0px 10px 10px;">
-        {{ range $name, $items := .Site.Taxonomies.tags }}
-            <a href="{{ $.Site.BaseURL }}/tags/{{ $name | urlize | lower }}" title="{{ $name }}">{{ $name }}<sup>{{ len $items }}</sup></a>
-        {{ end }}
-        </div>
+    {{ if not (eq (len .Site.Taxonomies.tags) 0) }}
+        <h2 class="asidetitle">{{ .Site.Params.Strings.Tags }}</h2>
+        <canvas width="258" height="258" id="myCanvas">
+            <ul><!--  style="border:1px dashed #000;" -->
+            {{ range $name, $items := .Site.Taxonomies.tags }}
+                <li>
+                    <a href="{{ $.Site.BaseURL }}/tags/{{ $name | urlize | lower }}" title="{{ $name }}">{{ $name }}<sup>{{ len $items }}</sup></a>
+                </li>
+            {{ end }}
+            </ul>
+        </canvas>
+    {{ end }}
+{{ end }}
 </div>
-{{ end }}
-{{ end }}
