--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,14 +1,32 @@
     <!-- 标签云 -->
-    <!--[if lt IE 9]>
-    <script type="text/javascript" src="/js/excanvas.js"></script>
-    <![endif]-->
-    <script src="/js/jquery.tagcanvas.js" type="text/javascript"></script>
     <script type="text/javascript">
-    $(document).ready(function() {
-      if( ! $('#myCanvas').tagcanvas({textColour : '#2a2b2d',outlineColour: '#16a085',outlineThickness : 1,maxSpeed : 0.05,depth : 0.75,})) {
-          $('#myCanvasContainer').hide(); // TagCanvas failed to load
-      }
-      // your other jQuery stuff here...
+    $(document).ready(function(){
+        var alist = $('#tags p');
+        alist.each(function () {
+            var t = $(this);
+            var a = t.find('a');
+            var sup = parseInt(t.find('sup').text());
+            t.find('sup').hide();
+
+            if (0<sup && sup<6) {
+                a.addClass("text8");
+            } else if (5<sup && sup<11) {
+                a.addClass("text7");
+            } else if (10<sup && sup<16) {
+                a.addClass("text6");
+            } else if (15<sup && sup<21) {
+                a.addClass("text5");
+            } else if (20<sup && sup<26) {
+                a.addClass("text4");
+            } else if (25<sup && sup<31) {
+                a.addClass("text3");
+            } else if (30<sup && sup<36) {
+                a.addClass("text2");
+            } else {
+                a.addClass("text1");
+            }
+
+        });
     });
     </script>
 
