--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -4,15 +4,14 @@
 {{ if isset .Site.Taxonomies "tags" }}
     {{ if not (eq (len .Site.Taxonomies.tags) 0) }}
         <h2 class="asidetitle">{{ .Site.Params.Strings.Tags }}</h2>
-        <canvas width="258" height="258" id="myCanvas">
-            <ul><!--  style="border:1px dashed #000;" -->
+        <div class="taglist" id="tags">
             {{ range $name, $items := .Site.Taxonomies.tags }}
-                <li>
-                    <a href="{{ $.Site.BaseURL }}/tags/{{ $name | urlize | lower }}" title="{{ $name }}">{{ $name }}<sup>{{ len $items }}</sup></a>
-                </li>
+                <p style="display:inline-block;">
+                    <a href="{{ $.Site.BaseURL }}/tags/{{ $name | urlize | lower }}" title="{{ $name }}">{{ $name }}</a>
+                    <sup>{{ len $items }}</sup>
+                </p>
             {{ end }}
-            </ul>
-        </canvas>
+        </div>
     {{ end }}
 {{ end }}
 </div>
