--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,15 +132,21 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 
 /*******************************************************************/
 /*标签云*/
-#footer {position: relative; height: 70px;clear:both;} 
-.clearfix:after {content: ".";display: block;height: 0;clear: both;visibility: hidden;}
-.clearfix {display: inline-block;}
-* html .clearfix { height: 1%;}
-.clearfix {display: block;}
-#page,#footer_inner{margin:0 auto;width:960px;}
-.credit{text-align:center;padding: 20px 0 100px;font-size:10px;}
-a:hover{text-decoration:underline;}
-#footer{background-color:#212121;width:100%;}
-#footer h2{font-size:18px;font-weight:normal;height:70px;line-height:70px;font-family:"Microsoft Yahei";color:#eee;}
-#footer_inner{position:relative;}
-#footer a.tzine,a.tzine:visited{color:#FCFCFC;font-size:12px;line-height:70px;position:absolute;top:0;right:0;width:90px;}
+.taglist {margin-left:10px;left:10px;}
+.taglist a{display:inline-block;white-space:nowrap;}
+a.text1{font-size:35px;color:#0000AA;}
+a.text1:hover{color:#0000AA;}
+a.text2{font-size:32px;color:#00688B;}
+a.text2:hover{color:#00688B;}
+a.text3{font-size:29px;color:#008B00;}
+a.text3:hover{color:#008B00;}
+a.text4{font-size:26px;color:#68228B;}
+a.text4:hover{color:#68228B;}
+a.text5{font-size:23px;color:#00CD00;}
+a.text5:hover{color:#00CD00;}
+a.text6{font-size:20px;color:#00F5FF;}
+a.text6:hover{color:#00F5FF;}
+a.text7{font-size:17px;color:#ADFF2F;}
+a.text7:hover{color:#ADFF2F;}
+a.text8{font-size:14px;color:#4D4D4D;}
+a.text8:hover{color:#4D4D4D;}
