--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,7 +132,7 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 
 /*******************************************************************/
 /*标签云*/
-.taglist {margin-left:10px;left:10px;}
+.taglist {margin-top:10px;margin-left:10px;left:10px;line-height:25px;}
 .taglist a{display:inline-block;white-space:nowrap;}
 a.text1{font-size:35px;color:#0000AA;}
 a.text1:hover{color:#0000AA;}
