--- a/layouts/partials/topics.html
+++ b/layouts/partials/topics.html
@@ -4,7 +4,7 @@
 {{ if isset .Site.Taxonomies "topics" }}
 {{ if not (eq (len .Site.Taxonomies.topics) 0) }}
     <h2 class="asidetitle">{{ .Site.Params.Strings.Categories }}</h2>
-    <ul style="margin-left:10px;left:10px;">
+    <ul style="margin-left:10px;margin-bottom:0px;left:10px;">
         {{ range $name, $items := .Site.Taxonomies.topics }}
             <li style="list-style-type:none;"><a href="{{ $.Site.BaseURL }}/topics/{{ $name | urlize | lower }}" title="{{ $name }}">{{ $name }}({{ len $items }})</a></li>
         {{ end }}
