--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,8 +124,8 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 
 
 /*文章列表显示不友好，覆盖重写*/
-/*.pure-u-16-24{width:60%;*width:60%;font-size:17px;}
-.pure-u-5-24{width:30%;*width:30%;font-size:17px;}*/
+.pure-u-16-24{width:60%;*width:60%;font-size:17px;}
+.pure-u-5-24{width:30%;*width:30%;font-size:17px;}
 
 /*main右侧topics和tags格式*/
 .asidetitle{font-size:1.3em;color:#2ca6cb;padding:0 0 .3125em 0;border-bottom:.1875em solid #ccc;}
