--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,7 @@ pre {white-space: pre-wrap;word-wrap: break-word;}
 
 .post-meta {
   font-size: 90%;
+  padding-bottom: 1em;
 }
 
 article > footer {text-align: right;}
