--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,13 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
 .copyright{float:left;text-align: center;}
 .social{float:right;}
 
+/*main右侧topics和tags格式*/
+.asidetitle{font-size:1.3em;color:#2ca6cb;padding:0 0 .3125em 0;border-bottom:.1875em solid #ccc;}
+
+/*文章列表显示不友好，覆盖重写*/
+.pure-u-16-24{width:60%;*width:60%;font-size:17px;}
+.pure-u-5-24{width:30%;*width:30%;font-size:17px;}
+
 /*当页面小于700px时隐藏logo和right*/
 @media screen and (max-width: 700px) {
   .reber{padding-top:0px;margin:0px auto;width:99%;}
@@ -113,7 +120,8 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
   .nav li a{padding:5px 5px;line-height:20px;color:#555;}
   
   .left{float:none;width:95%;}
-  .left ul li div time {display: none;}
+  .pure-u-16-24{width:99%;}
+  .pure-u-5-24{display: none;}
   .right {display: none;}
   
   .copyright {display: none;}
@@ -122,14 +130,6 @@ body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea
   .goToTop{width:30px;height:30px;position:fixed;right:10px;bottom:40px;}
   .goToTop a img{width:30px;height:30px;display:block;}
 }
-
-
-/*文章列表显示不友好，覆盖重写*/
-.pure-u-16-24{width:60%;*width:60%;font-size:17px;}
-.pure-u-5-24{width:30%;*width:30%;font-size:17px;}
-
-/*main右侧topics和tags格式*/
-.asidetitle{font-size:1.3em;color:#2ca6cb;padding:0 0 .3125em 0;border-bottom:.1875em solid #ccc;}
 
 
 /*******************************************************************/
