--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -33,7 +33,7 @@
     <!-- 设置回到顶部按钮 -->
     <div class="goToTop">
       <a href="#top" id="goToTop">
-        <img src="{{ .Site.BaseURL }}/img/goto_top.png" alt="可以返回顶部" title="回到顶部" style="display:block;" />
+        <img src="{{ .Site.BaseURL }}/img/goto_top.png" alt="可以返回顶部" title="回到顶部"/>
       </a>
     </div>
     <script type="text/javascript">
@@ -57,8 +57,6 @@
         $('#goToTop').goToTop();
     });
     </script>
-
-    <!-- <script src="/js/ui.js"></script> -->
 
 </body>
 </html>
