--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,20 +11,7 @@
             <h2>{{ .Key }}</h2>
             <ul>
                 {{ range .Pages }}
-                    <li>
-                        <div class="pure-u-16-24">
-                            <a href="{{ .Permalink }}">{{ .Title }}</a>
-                        </div>
-                        <div class="pure-u-5-24">
-                            <time>
-                                {{ with .Site.Params.DateFormat }}
-                                    {{ $.Date.Format "2006-01-02 15:04" }}
-                                {{ else }}
-                                    {{ .Date.Format "02 Jan 2006, 15:04" }}
-                                {{ end }}
-                            </time>
-                        </div>
-                    </li>
+                    {{ .Render "li" }}
                 {{ end }}
             </ul>
             {{ end }}
