--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,6 +1,6 @@
 <li>
     <div class="pure-u-16-24">
-        <a target="_blank" href="{{ .Permalink }}">{{ .Title }}</a>
+        <a href="{{ .Permalink }}">{{ .Title }}</a>
     </div>
     <div class="pure-u-5-24">
         <time>
