--- a/layouts/partials/page_head.html
+++ b/layouts/partials/page_head.html
@@ -4,7 +4,7 @@
         <a href="/">{{ .Site.Params.Logo | safeHTML }}</a>
     </h1>
     <ul class="nav">
-        {{ range .Site.Menus.Main }}
+        {{ range .Site.Menus.main }}
             {{ if .HasChildren }}
                 <li>
                     <a href="/">{{ .Pre }}{{ .Name }}</a>
