--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -38,7 +38,7 @@
     </header>
 
     <!-- 文章摘要 -->
-    <p style="max-height:130px;overflow:hidden;line-height:1.6;position: relative;word-wrap: break-word !important;z-index:1;">
+    <p style="max-height:130px;overflow:hidden;line-height:26px;position: relative;word-wrap: break-word !important;z-index:1;">
         {{ .Summary }}
     </p>
 
