--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ if .IsHome }}Reber's Blog - 漏洞挖掘|渗透测试|python|php {{ else }}{{ .Title }} - Reber's Blog{{ end }}</title>
-  <meta name="keywords" content="渗透测试 漏洞挖掘 web安全 网络安全 python php linux">
-  <meta name="description" content="{{ if .IsNode }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ else }}{{ with .Description }}{{ . }}{{ end }}{{ end }}">
-  <meta name="author" content="{{ .Site.Params.Author }}">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ if .IsHome }}Reber's Blog - 漏洞挖掘|渗透测试|python|php {{ else }}{{ .Title }} - Reber's Blog{{ end }}</title>
+    <meta name="keywords" content="渗透测试 漏洞挖掘 web安全 网络安全 python php linux">
+    <meta name="description" content="{{ if .IsNode }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ else }}{{ with .Description }}{{ . }}{{ end }}{{ end }}">
+    <meta name="author" content="{{ .Site.Params.Author }}">
 
-  <!-- {{.Hugo.Generator}} -->
-  <!-- CSS -->
-  {{ $purecss := "https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/" }}
-  <link rel="stylesheet" href="{{ $purecss }}pure-min.css">
+    <!-- {{.Hugo.Generator}} -->
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="/css/pure-min.css">
 
-  {{ "<!--[if lte IE 8]>" | safeHTML }}
-  <link rel="stylesheet" href="{{ $purecss }}grids-responsive-old-ie-min.css">
-  {{ "<![endif]-->" | safeHTML }}
-  {{ "<!--[if gt IE 8]><!-->" | safeHTML }}
-  <link rel="stylesheet" href="{{ $purecss }}grids-responsive-min.css">
-  {{ "<!--<![endif]-->" | safeHTML }}
+    {{ "<!--[if lte IE 8]>" | safeHTML }}
+    <link rel="stylesheet" type="text/css" href="/css/grids-responsive-old-ie-min.css">
+    {{ "<![endif]-->" | safeHTML }}
+    {{ "<!--[if gt IE 8]><!-->" | safeHTML }}
+    <link rel="stylesheet" type="text/css" href="/css/grids-responsive-min.css">
+    {{ "<!--<![endif]-->" | safeHTML }}
 
-  <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
-  <!-- Home/Archive/Links/About Icons -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <!-- Icon透明图片 -->
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <!-- Home/Archive/Links/About Icons -->
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- Icon透明图片 -->
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
+    <!-- Fonts -->
+    <link rel="stylesheet" type="text/css" href="/css/fonts-googleapis.css">
 
-  <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="/index.xml" />
+    <!-- RSS -->
+    <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="/index.xml" />
 
-  <!-- Code highlight -->
-  <link rel="stylesheet" href="/css/monokai-sublime.css" type="text/css">
-  <script src="/js/highlight.min.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+    <!-- Code highlight -->
+    <link rel="stylesheet" href="/css/monokai-sublime.css" type="text/css">
+    <script src="/js/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 
-  <script src="/js/jquery.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
 
 </head>
 <body>
