--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,11 @@ i {display: inline-block;margin-right: 0.2em;}
 
 .goToTop{width:20px;height:20px;position:fixed;right:50px;bottom:50px;}
 
+.border_img {
+  border: 0.2em solid #e0dfcc;
+  border-radius: 0.5em;
+}
+
 
 /*******************************************************************/
 
