--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,22 @@
 body {color: #777;}
-
-.header {font-family: "Raleway", Helvetica, Arial, sans-serif}
-
+body,h1,h2,h3,h4,h5,p,dl,dt,dd,form,fieldset,legend,input,textarea,button,th,td {margin:0; padding:0;outline: none;}
 a {color: #3b8bba;text-decoration: none;}
-a:hover,
-a:focus {text-decoration: underline;}
+a:hover,a:focus {text-decoration: underline;}
 a:visited {color: #265778;}
 a:hover{color:#F66535;}
-
-
 pre {white-space: pre-wrap;word-wrap: break-word;}
-
-.small-print {
-  font-size: 0.8em;
-  margin: 0.6em;
-}
-
-.post-meta {
-  font-size: 90%;
-  padding-bottom: 0.5em;
-}
-
 article > footer {text-align: right;}
-
-.prev-next-post {
-  margin-top: 1em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-}
-
-.prev-next-post .prev {
-  float: left;
-  text-align: left;
-  overflow: hidden;
-}
-
-.prev-next-post .next {
-  float: right;
-  text-align: right;
-  overflow: hidden;
-}
-
-#menu .brand {
-  font-family: Raleway;
-  font-weight: bold;
-  font-size: 1em;
-  letter-spacing: 0.1em;
-  text-transform: none;
-  background: transparent;
-  text-decoration: none;
-  margin: 0.5em 0;
-}
-
-#menu .pure-menu {font-size: 0.9em;}
-
-#main {padding-top:0px;margin:0px auto;width:95%;}
-
-i {display: inline-block;margin-right: 0.2em;}
-
-.pagination {text-align: center;margin-top: 3em;}
-
-.pagination a {color: #265778;}
-
-
-.goToTop{width:20px;height:20px;position:fixed;right:50px;bottom:50px;}
-
 p img {max-width:99%;height:auto;display:block;border: 0.2em solid #e0dfcc;border-radius: 0.5em;}
+
+.small-print {font-size: 0.8em;margin: 0.6em;}
+.post-meta {font-size: 90%;padding-bottom: 0.5em;}
+.prev-next-post {margin-top: 1em;padding-top: 1em;padding-bottom: 1em;border-top: 1px solid #eee;border-bottom: 1px solid #eee;}
+.prev-next-post .prev {float: left;text-align: left;overflow: hidden;}
+.prev-next-post .next {float: right;text-align: right;overflow: hidden;}
+.goToTop{width:20px;height:20px;position:fixed;right:50px;bottom:50px;}
 .pure-u-1 img {max-width:99%;height:auto;display:block;border: 0.2em solid #e0dfcc;border-radius: 0.5em;}
 
-
 /*******************************************************************/
-
-body, h1, h2, h3, h4, h5, p, dl, dt, dd, form, fieldset, legend, input, textarea, button, th, td {margin:0; padding:0;outline: none;}
-/*width: 80%; margin-right: auto; margin-left: auto;*/
 .reber{padding-top:10px;margin:0px auto;width:85%;}
 .head{height:90px;border-bottom:#EFEFEF 1px solid;}
 .main{padding-top:1px;padding-bottom:5px;zoom:1;overflow:hidden;width:99%;}
