--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ p img {max-width:99%;height:auto;display:block;border: 0.2em solid #e0dfcc;borde
 
 .small-print {font-size: 0.8em;margin: 0.6em;}
 .post-meta {font-size: 90%;padding-bottom: 0.5em;}
+.pagination {text-align: center;margin-top: 3em;}
 .prev-next-post {margin-top: 1em;padding-top: 1em;padding-bottom: 1em;border-top: 1px solid #eee;border-bottom: 1px solid #eee;}
 .prev-next-post .prev {float: left;text-align: left;overflow: hidden;}
 .prev-next-post .next {float: right;text-align: right;overflow: hidden;}
