--- a/static/css/monokai-sublime.css
+++ b/static/css/monokai-sublime.css
@@ -5,7 +5,7 @@ cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/monokai-sublime.min.css
 
 .hljs {
   display: block;
-  overflow-x: auto;
+  overflow-x: hidden;
   padding: 0.5em;
   background: #23241f;
 }
