--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -58,7 +58,7 @@
     </script>
 
     <!-- 背景动画 -->
-    <!-- <script src="/js/particle.js"></script> -->
+    <!-- <script src="/js/background.js"></script> -->
 
 </body>
 </html>
