--- a/layouts/partials/page_main.html
+++ b/layouts/partials/page_main.html
@@ -10,8 +10,7 @@
         </div>
     </div>
     <div class="right">
-        <div>
-            <br>
+        <div style="margin-top:10px;">
             {{ partial "topics.html" . }}
             {{ partial "tags.html" . }}
             {{ partial "links.html" . }}
