--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ if .IsHome }}Reber's Blog - 漏洞挖掘|渗透测试|python|php {{ else }}{{ .Title }} - Reber's Blog{{ end }}</title>
     <meta name="keywords" content="渗透测试 漏洞挖掘 web安全 网络安全 python php linux">
-    <meta name="description" content="{{ if .IsNode }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ else }}{{ with .Description }}{{ . }}{{ end }}{{ end }}">
+    <meta name="description" content="{{ if .IsNode }}{{ with .Site.Params.Description }}{{ . }}{{ end }}{{ else }}{{ with .Description }}{{ . }}{{ end }}{{ end }}">
     <meta name="author" content="{{ .Site.Params.Author }}">
 
     <!-- {{.Hugo.Generator}} -->
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="/css/fonts-googleapis.css">
 
     <!-- RSS -->
-    <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="/index.xml" />
+    <link rel="alternate" type="application/rss+xml" href="/index.xml" />
 
     <!-- Code highlight -->
     <link rel="stylesheet" href="/css/monokai-sublime.css" type="text/css">
