--- a/layouts/partials/page_foot.html
+++ b/layouts/partials/page_foot.html
@@ -2,7 +2,7 @@
 <div class="foot">
     <div class="copyright">
         <!-- Copyright -->
-        {{ .Site.Copyright | safeHTML }}
+        {{ .Site.Params.Copyright | safeHTML }}
 
         <!-- 站点统计 -->
         <script type="text/javascript">
