--- a/static/css/monokai-sublime.css
+++ b/static/css/monokai-sublime.css
@@ -7,7 +7,7 @@ cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/monokai-sublime.min.css
   display: block;
   overflow-x: hidden;
   padding: 0.5em;
-  background: #23241f;
+  background: #383838;
 }
 
 .hljs,
