--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="/css/fonts-googleapis.css">
 
     <!-- RSS -->
-    <link rel="alternate" type="application/rss+xml" href="/index.xml" />
+    <link rel="alternate" type="application/rss+xml" title="{{ .Site.Params.Title }}" href="/index.xml" />
 
     <!-- Code highlight -->
     <link rel="stylesheet" href="/css/monokai-sublime.css" type="text/css">
