--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body {color: #777;}
-body,h1,h2,h3,h4,h5,p,dl,dt,dd,form,fieldset,legend,input,textarea,button,th,td {margin:0; padding:0;outline: none;}
+body,h1,h4,h5,p,dl,dt,dd,form,fieldset,legend,input,textarea,button,th,td {margin:0; padding:0;outline: none;}
+h2 {margin:0; padding:0;outline: none;color:#3b8bba;}
+h3 {margin:0; padding:0;outline: none;color:#000000;}
 a {color: #3b8bba;text-decoration: none;}
 a:hover,a:focus {text-decoration: underline;}
 a:visited {color: #265778;}
