--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ a {color: #3b8bba;text-decoration: none;}
 a:hover,a:focus {text-decoration: underline;}
 a:visited {color: #265778;}
 a:hover{color:#F66535;}
-pre {white-space: pre-wrap;word-wrap: break-word;}
+pre {white-space: pre-wrap;word-wrap: break-word;margin-left:30px;}
 article > footer {text-align: right;}
 p img {max-width:99%;height:auto;display:block;border: 0.2em solid #e0dfcc;border-radius: 0.5em;}
 
