--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ if .IsHome }}Reber's Blog - 漏洞挖掘|渗透测试|python|php {{ else }}{{ .Title }} - Reber's Blog{{ end }}</title>
-    <meta name="keywords" content="渗透测试,漏洞挖掘,web安全,网络安全,python,php,linux">
+    <title>{{ if .IsHome }}Reber's Blog - 渗透测试|python|php {{ else }}{{ .Title }} - Reber's Blog{{ end }}</title>
+    <meta name="keywords" content="渗透测试,web安全,网络安全,python,php,linux">
     <meta name="description" content="{{ if .IsNode }}{{ with .Site.Params.Description }}{{ . }}{{ end }}{{ else }}{{ with .Description }}{{ . }}{{ end }}{{ end }}">
     <meta name="author" content="{{ .Site.Params.Author }}">
 
