--- a/layouts/partials/page_foot.html
+++ b/layouts/partials/page_foot.html
@@ -7,6 +7,7 @@
         <!-- 站点统计 -->
         <script language="javascript" type="text/javascript" src="//quote.users.51.la/?id=19363080&mb=3"></script>
     </div>
+    <script>$('.copyright img').remove();</script>
     <div class="social">
         <!-- social -->
         {{ with .Site.Params.Social.GitHub }}
