--- a/layouts/partials/page_foot.html
+++ b/layouts/partials/page_foot.html
@@ -5,7 +5,8 @@
         {{ .Site.Params.Copyright | safeHTML }}
 
         <!-- 站点统计 -->
-        <script language="javascript" type="text/javascript" src="//quote.users.51.la/?id=19363080&mb=3"></script>
+        <script language="javascript" type="text/javascript" src="/js/19363536.js"></script>
+        <script language="javascript" type="text/javascript" src="//quote.users.51.la/?id=19363536&mb=3"></script>
     </div>
     <script>$('.copyright img').remove();</script>
     <div class="social">
