--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,8 +54,8 @@ p img {max-width:99%;height:auto;display:block;border: 0.2em solid #e0dfcc;borde
 .content ol li pre {margin:0; padding:0px;outline: none;font-size:14px;}
 
 /*foot css*/
-.copyright{float:left;text-align: center;}
-.social{float:right;}
+.copyright{float:left;text-align: center;font-size:15px;}
+.social{float:right;font-size:15px;}
 
 /*main右侧topics和tags格式*/
 .asidetitle{font-size:1.3em;color:#2ca6cb;padding:0 0 .3125em 0;border-bottom:.1875em solid #ccc;}
