--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -40,4 +40,5 @@
     <script src="/js/jquery.min.js"></script>
 
 </head>
-<body oncopy="return false" oncontextmenu="return false">
+<!-- <body oncopy="return false" oncontextmenu="return false"> -->
+<body>
