--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,8 +9,6 @@
         <div class="left">
             <div>
                 <h2>{{ .Title }}</h2>
-            </div>
-            <div class="content">
                 <!-- 文章的时间、分类/标签的图标 -->
                 <div class="post-meta">
                     <div style="padding:5px 5px 2px 0px;">
@@ -43,6 +41,9 @@
                         {{ end }}
                     </div>
                 </div>
+                <!-- {{ .TableOfContents }} -->
+            </div>
+            <div class="content">
                 
                 {{ .Content }}
                 
