--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,9 +5,9 @@ a {color: #3b8bba;text-decoration: none;}
 a:hover,a:focus {text-decoration: underline;}
 a:visited {color: #265778;}
 a:hover{color:#F66535;}
-pre {white-space: pre-wrap;word-wrap: break-word;margin:0px;margin-left:35px;font-size:14px;}
+pre {white-space: pre-wrap;word-wrap: break-word;margin:8px 0px 8px 35px;font-size:14px;}
 article > footer {text-align: right;}
-li p {margin:0px; padding:2px;outline: none;font-size:14px;}
+li p {margin:0px; padding:2px;outline: none;font-size:16px;}
 article p {margin:0; padding:2px;outline: none;font-size:14px;}
 blockquote p {margin:0; padding:0;outline: none;}
 p {margin:2px; padding:2px;outline: none;margin-left:30px;font-size:14px;}
