--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ a:hover{color:#F66535;}
 pre {white-space: pre-wrap;word-wrap: break-word;margin:8px 0px 8px 35px;font-size:14px;}
 article > footer {text-align: right;}
 li p {margin:0px; padding:2px;outline: none;font-size:16px;}
-article p {margin:0; padding:2px;outline: none;font-size:14px;}
+article p {margin:0px 5px 0px 5px;outline: none;font-size:14px;}
 blockquote p {margin:0; padding:0;outline: none;}
 p {margin:2px; padding:2px;outline: none;margin-left:30px;font-size:14px;}
 p img {max-width:99%;height:auto;display:block;border: 0.2em solid #e0dfcc;border-radius: 0.5em;margin:4px 0px;}
