--- a/layouts/partials/links.html
+++ b/layouts/partials/links.html
@@ -9,7 +9,7 @@
             <a href="http://zksmile.me/" target="_blank">Zksmile's Blog</a>
         </li>
         <li style="list-style-type:none;">
-            <a href="http://www.y-hkl.top/" target="_blank">Y-HKL's Blog</a>
+            <a href="https://y-hkl.github.io/" target="_blank">Y-HKL's Blog</a>
         </li>
         <li style="list-style-type:none;">
             <a href="http://s.yl0.org/" target="_blank">sòng•sec</a>
