--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -57,6 +57,15 @@
     });
     </script>
 
+    <!-- 添加a标签的支持 -->
+    <script type="text/javascript">
+    var aTagArr = [].slice.apply(document.getElementsByTagName("a"));
+
+    aTagArr.forEach(function (e, i) {
+        e.href.indexOf("_blank") > -1 ? e.target = "_blank" : null;
+    });
+    </script>
+
     <!-- 背景动画 -->
     <!-- <script src="/js/background.js"></script> -->
 
