--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,7 @@ code {border-radius: 7px;}
 .prev-next-post .prev {float: left;text-align: left;overflow: hidden;}
 .prev-next-post .next {float: right;text-align: right;overflow: hidden;}
 .goToTop{width:20px;height:20px;position:fixed;right:50px;bottom:50px;}
+.color {color:#c5285c;}
 
 
 /*******************************************************************/
