--- a/layouts/partials/links.html
+++ b/layouts/partials/links.html
@@ -1,18 +1,18 @@
 
-<div style="padding-bottom:20px;">
+<div style="padding-bottom:10px;">
     <h2 class="asidetitle">{{ .Site.Params.Strings.Links }}</h2>
     <ul style="margin-left:10px;margin-bottom:0px;left:10px;">
         <li style="list-style-type:none;">
-            <a href="http://www.test404.com/" target="_blank">Test404's Blog</a>
+            <i class="fa fa-link fa-fw"></i><a href="http://www.test404.com/" target="_blank">Test404's Blog</a>
         </li>
         <li style="list-style-type:none;">
-            <a href="http://zksmile.me/" target="_blank">Zksmile's Blog</a>
+            <i class="fa fa-link fa-fw"></i><a href="http://zksmile.me/" target="_blank">Zksmile's Blog</a>
         </li>
         <li style="list-style-type:none;">
-            <a href="https://y-hkl.github.io/" target="_blank">Y-HKL's Blog</a>
+            <i class="fa fa-link fa-fw"></i><a href="https://y-hkl.github.io/" target="_blank">Y-HKL's Blog</a>
         </li>
         <li style="list-style-type:none;">
-            <a href="http://s.yl0.org/" target="_blank">sòng•sec</a>
+            <i class="fa fa-link fa-fw"></i><a href="http://s.yl0.org/" target="_blank">sòng•sec</a>
         </li>
     </ul>
 </div>
