--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -65,6 +65,7 @@
                 {{ partial "topics.html" . }}
                 {{ partial "tags.html" . }}
                 {{ partial "links.html" . }}
+                {{ partial "social.html" . }}
             </div>
         </div>
     </div>
