--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -22,6 +22,7 @@
                 {{ partial "topics.html" . }}
                 {{ partial "tags.html" . }}
                 {{ partial "links.html" . }}
+                {{ partial "social.html" . }}
             </div>
         </div>
     </div>
