--- a/layouts/partials/page_main.html
+++ b/layouts/partials/page_main.html
@@ -14,6 +14,7 @@
             {{ partial "topics.html" . }}
             {{ partial "tags.html" . }}
             {{ partial "links.html" . }}
+            {{ partial "social.html" . }}
         </div>
     </div>
 </div>
