--- a/layouts/partials/topics.html
+++ b/layouts/partials/topics.html
@@ -1,12 +1,15 @@
 <!-- 显示类别 -->
 
-<div style="padding-bottom:20px;">
+<div style="padding-bottom:10px;">
 {{ if isset .Site.Taxonomies "topics" }}
 {{ if not (eq (len .Site.Taxonomies.topics) 0) }}
     <h2 class="asidetitle">{{ .Site.Params.Strings.Categories }}<a href="/links.html" class="links">s</a></h2>
     <ul style="margin-left:10px;margin-bottom:0px;left:10px;">
         {{ range $name, $items := .Site.Taxonomies.topics }}
-            <li style="list-style-type:none;"><a href="{{ $.Site.BaseURL }}/topics/{{ $name | urlize | lower }}" title="{{ $name }}">{{ $name }}({{ len $items }})</a></li>
+            <li style="list-style-type:none;">
+                <i class="fa fa-folder fa-fw"></i>
+                <a href="{{ $.Site.BaseURL }}/topics/{{ $name | urlize | lower }}" title="{{ $name }}">{{ $name }}({{ len $items }})</a>
+            </li>
         {{ end }}
     </ul>
 {{ end }}
