--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,7 +57,7 @@ f {color:#c5285c;} /*自定义标签，给字体加上颜色，相当于<font co
 .content ol li pre {margin:0; padding:0px;outline: none;font-size:14px;}
 
 /*foot css*/
-.copyright{text-align: center;font-size:15px;}
+.copyright{float:left;text-align: center;font-size:15px;}
 /*.social{float:right;font-size:15px;}*/
 
 /*main右侧topics和tags格式*/
