--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,7 @@ article p {margin:0px 5px 0px 5px;outline: none;font-size:14px;}
 blockquote p {margin:0; padding:0;outline: none;}
 p {margin:2px; padding:2px;outline: none;margin-left:30px;font-size:15px;}
 p img {max-width:99%;height:auto;display:block;border: 0.2em solid #e0dfcc;border-radius: 0.5em;margin:10px 0px;}
+li img {max-width:99%;height:auto;display:block;border: 0.2em solid #e0dfcc;border-radius: 0.5em;margin:10px 0px;}
 pre {white-space: pre-wrap;word-wrap: break-word;margin:8px 0px 8px 35px;font-size:14px;}
 code {border-radius: 7px;}
 f {color:#c5285c;} /*自定义标签，给字体加上颜色，相当于<font color=#c5285c></font>*/
