--- a/layouts/partials/page_foot.html
+++ b/layouts/partials/page_foot.html
@@ -2,7 +2,8 @@
 <div class="foot">
     <div class="copyright">
         <!-- Copyright -->
-        {{ .Site.Params.Copyright | safeHTML }}
+        Copyright &copy; 2015-<script>var d=new Date();document.write(d.getFullYear());</script> Reber. All Rights Reserved.
+        <!-- {{ .Site.Params.Copyright | safeHTML }} -->
 
         <!-- 站点统计 -->
         <script type="text/javascript" src="//js.users.51.la/19363536.js"></script>
