--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,9 +5,9 @@ a {color: #3b8bba;text-decoration: none;}
 a:hover,a:focus {text-decoration: underline;}
 a:visited {color: #265778;}
 a:hover {color:#F66535;}
-a.links:link {color: #2ca6cb}
-a.links:visited {color: #2ca6cb}
-a.links {color:#2ca6cb;cursor:default;text-decoration:none;}
+a.single:link {color: #2ca6cb}
+a.single:visited {color: #2ca6cb}
+a.single {color:#2ca6cb;cursor:default;text-decoration:none;}
 article > footer {text-align: right;}
 li p {margin:0px; padding:2px;outline: none;font-size:16px;}
 article p {margin:0px 5px 0px 5px;outline: none;font-size:14px;}
