--- a/layouts/partials/topics.html
+++ b/layouts/partials/topics.html
@@ -3,7 +3,7 @@
 <div style="padding-bottom:10px;">
 {{ if isset .Site.Taxonomies "topics" }}
 {{ if not (eq (len .Site.Taxonomies.topics) 0) }}
-    <h2 class="asidetitle">{{ .Site.Params.Strings.Categories }}<a href="/links.html" class="links">s</a></h2>
+    <h2 class="asidetitle">{{ .Site.Params.Strings.Categories }}<a href="/single/" class="single">s</a></h2>
     <ul style="margin-left:10px;margin-bottom:0px;left:10px;">
         {{ range $name, $items := .Site.Taxonomies.topics }}
             <li style="list-style-type:none;">
