update date format

--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -7,7 +7,7 @@
             {{ with .Site.Params.DateFormat }}
                 {{ $.Date.Format "2006-01-02 15:04" }}
             {{ else }}
-                {{ .Date.Format "02 Jan 2006, 15:04" }}
+                {{ .Date.Format "2006/01/02 15:04" }}
             {{ end }}
         </time>
     </div>
