--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -8,7 +8,13 @@
         <div class="post-meta">
             <div style="padding:5px 5px 2px 5px;">
                 <i class="fa fa-calendar fa-fw"></i>
-                <time>{{ with .Site.Params.DateFormat }}{{ $.Date.Format . }}{{ else }}{{ .Date.Format "02 Jan 2006, 15:04" }}{{ end }}</time>
+                <time>
+                    {{ with .Site.Params.DateFormat }}
+                        {{ $.Date.Format . }}
+                    {{ else }}
+                        {{ .Date.Format "2006-01-02" }}
+                    {{ end }}
+                </time>
                 &nbsp;&nbsp;&nbsp;&nbsp;
             <!-- </div> -->
 
