--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,3 +1,9 @@
+<!--
+ * @Author: reber
+ * @Mail: 1070018473@qq.com
+ * @Date: 2019-04-10 10:45:01
+ * @LastEditTime: 2019-05-14 09:49:18
+ -->
 <!-- 分页 -->
 {{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
     {{ $prev := "fa fa-chevron-left"}}
