更新版权声明

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,3 +1,9 @@
+<!--
+ * @Author: reber
+ * @Mail: reber0ask@qq.com
+ * @Date: 2019-04-10 10:45:01
+ * @LastEditTime: 2019-08-13 16:27:17
+ -->
 {{ partial "header.html" . }}
 
 <!-- 完整文章显示 -->
@@ -54,7 +60,7 @@
                 {{ .Content }}
                 
                 <div style="padding:10px 1px;">
-                    <font color="FF0000">若未作声明则文章版权归本人所有，转载请注明原文链接：</font>
+                    <font color="FF0000">若未作声明则文章版权归本人(<f>@reber</f>)所有，转载请注明原文链接：</font>
                     <script>
                         var link = decodeURI(window.location.href);
                         var url = '<a href="' + link + '">'+link+'</a>';
