Update Date Format

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -12,14 +12,10 @@
                 <!-- 文章的时间、分类/标签的图标 -->
                 <div class="post-meta">
                     <div style="padding:5px 5px 2px 5px;">
-                        <br>
-<!--                         <i class="fa fa-calendar fa-fw"></i>
+                        <!-- <br>
+                        <i class="fa fa-calendar fa-fw"></i>
                         <time>
-                            {{ with .Site.Params.DateFormat }}
-                                {{ $.Date.Format . }}
-                            {{ else }}
-                                {{ .Date.Format "2006-01-02" }}
-                            {{ end }}
+                            {{ $.Date.Format "2006-01-02" }}
                         </time> -->
                         &nbsp;&nbsp;&nbsp;&nbsp;
                     <!-- </div> -->
