--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -20,11 +20,7 @@
                     <div style="padding:5px 5px 2px 5px;">
                         <i class="fa fa-calendar fa-fw"></i>
                         <time>
-                            {{ with .Site.Params.DateFormat }}
-                                {{ $.Date.Format . }}
-                            {{ else }}
-                                {{ .Date.Format "2006-01-02" }}
-                            {{ end }}
+                            {{ $.Date.Format "2006-01-02 15:04" }}
                         </time>
                         &nbsp;&nbsp;&nbsp;&nbsp;
                     <!-- </div> -->
