--- a/themes/smigle/layouts/partials/postMeta.html
+++ b/themes/smigle/layouts/partials/postMeta.html
@@ -9,7 +9,7 @@
     {{- end }}
   </strong>
   {{ with .WordCount }}<span> • {{ . }} words</span>{{ end }}
-  {{ with .ReadingTime}}<span> • {{ . }} minute read</span>{{ end }}
+  <!-- {{ with .ReadingTime}}<span> • {{ . }} minute read</span>{{ end }} -->
   {{ with .Params.tags }}
     <div>
       <span>Tags:</span>
