--- a/themes/smigle/layouts/partials/postMetaDetailed.html
+++ b/themes/smigle/layouts/partials/postMetaDetailed.html
@@ -9,7 +9,7 @@
     {{- end }}
   </strong>
   {{ with .WordCount }}<span> • {{ . }} words</span>{{ end }}
-  {{ with .ReadingTime}}<span> • {{ . }} minute read</span>{{ end }}
+  <!-- {{ with .ReadingTime}}<span> • {{ . }} minute read</span>{{ end }} -->
   {{ if and .IsPage (ne .Date .Lastmod) }}
     <div>
       Last updated on
