--- a/themes/smigle/layouts/partials/footer.html
+++ b/themes/smigle/layouts/partials/footer.html
@@ -3,9 +3,8 @@
   {{ if .Site.Params.social }}
     <p id="social">
       Find me around the web:
-      <br />
       {{ range $i, $e := .Site.Params.social }}
-        {{ if $i }} | {{ end }}
+        {{ if $i }} • {{ end }}
         <a href="{{ .url }}">{{ .name }}</a>
       {{ end }}
     </p>
@@ -16,7 +15,7 @@
 
     Built with
     <a href="http://www.gohugo.io/">Hugo</a>,
-    using the theme
+    based on the theme
     <a href="https://gitlab.com/ian-s-mcb/smigle-hugo-theme">smigle</a>.
   </p>
 </footer>
