--- a/themes/smigle/layouts/partials/postMetaDetailed.html
+++ b/themes/smigle/layouts/partials/postMetaDetailed.html
@@ -1,28 +1,11 @@
+<!--
+ * @Author: reber
+ * @Mail: reber0ask@qq.com
+ * @Date: 2021-09-01 02:52:08
+ * @LastEditTime: 2022-06-01 11:02:29
+-->
 <div class="post-meta">
-  <strong>
-    <span>Posted on</span>
     <time>{{ .Date.Format (default "2006-01-02 15:04:05" .Site.Params.dateFmt) }}</time>
-    {{ with .Params.categories }}<span>in</span>{{ end }}
-    {{ range $key, $value := .Params.categories -}}
-      {{- if $key }}, {{ end }}
-      <a href="{{ "/categories/" | relLangURL }}{{ $value | urlize }}">{{ . }}</a>
-    {{- end }}
-  </strong>
-  {{ with .WordCount }}<span> • {{ . }} words</span>{{ end }}
-  <!-- {{ with .ReadingTime}}<span> • {{ . }} minute read</span>{{ end }} -->
-  {{ if and .IsPage (ne .Date .Lastmod) }}
-    <div>
-      Last updated on
-      <time>{{ .Lastmod.Format (default "2006-01-02 15:04:05" .Site.Params.dateFmt) }}</time>
-    </div>
-  {{ end }}
-  {{ with .Params.tags }}
-    <div>
-      <span>Tags:</span>
-      {{ range $key, $value := . }}
-        {{- if $key }}, {{ end }}
-        <a href="{{ "/tags/" | relLangURL }}{{ $value | urlize }}">{{ . }}</a>
-      {{- end }}
-    </div>
-  {{ end }}
+    {{ if and .IsPage (ne .Date .Lastmod) }}(update <time>{{ .Lastmod.Format (default "2006-01-02 15:04:05" .Site.Params.dateFmt) }}</time>){{ end }}
+    [{{ range $key, $value := .Params.categories -}}{{- if $key }}, {{ end }}<a href="{{ "/categories/" | relLangURL }}{{ $value | urlize }}">{{ . }}</a>{{- end }}]{{ with .Params.tags }}({{ range $key, $value := . }}{{- if $key }},{{ end }}<a href="{{ "/tags/" | relLangURL }}{{ $value | urlize }}">{{ . }}</a>{{- end }}){{ end }}
 </div>
