--- a/themes/smigle/layouts/partials/head.html
+++ b/themes/smigle/layouts/partials/head.html
@@ -13,7 +13,7 @@
     {{ end }}
   {{ end }}
   <link rel="stylesheet" href="{{ "css/reset.css" | relURL }}"/>
-  <link rel="stylesheet" href="{{ "css/font.css" | relURL }}"/>
+  <!-- <link rel="stylesheet" href="{{ "css/font.css" | relURL }}"/> -->
   <link rel="stylesheet" href="{{ "css/smigle.css" | relURL }}"/>
   {{ range .Site.Params.customStylesheets }}
     <link rel="stylesheet" href="{{ . | relURL }}"/>
