--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,13 @@
+/*
+ * @Author: reber
+ * @Mail: reber0ask@qq.com
+ * @Date: 2022-01-18 18:16:12
+ * @LastEditTime: 2023-03-25 14:18:02
+ */
 
 pre {
     padding:0px;border-radius:5px;
-    white-space:pre-wrap;word-wrap:break-word;
+    /* white-space:pre-wrap;word-wrap:break-word; */
 }
 p > img,li > img {
     max-width:99%;height:auto;display:block;
